--- a/src/styles/mainPage.css
+++ b/src/styles/mainPage.css
@@ -27,16 +27,16 @@
 }
 
 @media (min-width: 992px) {
-
-    .main-page-container>* {
-        max-width: 80%;
+    .main-page-container > *{
+        width: 80%;
+        margin-inline: auto;
     }
 }
 
 @media (max-width: 992px) {
-    .main-page-container {
-        margin-left: 1rem;
-        margin-right: 1rem;
+    .main-page-container > * {
+        width: 90%;
+        margin-inline: auto;
     }
 
     .layout-title {
