--- a/src/styles/welcomeMain.css
+++ b/src/styles/welcomeMain.css
@@ -52,7 +52,7 @@
 
         top: 0px;
         border-radius: 0% !important;
-
+        width: 100% !important;
         z-index: -1;
     }
 
